--- a/Marvel/Marvel.Android/Marvel.Android.csproj
+++ b/Marvel/Marvel.Android/Marvel.Android.csproj
@@ -117,6 +117,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\comic.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\search1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
